Fix NL bar to fit screen and horizontal scroll issue

--- a/arpeggia-website/src/components/styles.css
+++ b/arpeggia-website/src/components/styles.css
@@ -147,20 +147,18 @@ p {
 
 .nl-text {
   position: ABSOLUTE;
-  top: 550px;
-  width: 1512px;
+  bottom: 80px;
+  width: 100%;
   height: 292px;
 }
 
 .group-392 {
   position: absolute;
-  top: 0px;
-  none: 0px;
-  padding: 49px 831px 175px 48px;
+  padding: 49px 0px 175px 48px;
   box-sizing: border-box;
   background-color: rgba(17, 0, 85, 1);
-  height: 320px;
-  width: 84%;
+  height: 370px;
+  width: 100%;
 }
 
 .txt-3310 {
@@ -327,12 +325,12 @@ p {
 
 #options {
   position: absolute;
-  right: -50px;
-  top: 30px;
+  padding-right: 90%;
 }
 #iAmA {
-  left: 764px;
+  left: 935px;
   position: absolute;
+  width: 200px;
   top: 45px;
 }
 
